Added tar and gzip, needed for working with Visual Studio Code

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -2,7 +2,7 @@
 FROM redhat/ubi9-minimal:9.5
 
 # Install Python3, pip, and the necessary libraries, and clean up temporary files
-RUN microdnf install -y python3 && \
+RUN microdnf install -y python3 tar gzip && \
     microdnf clean all && \
     curl -sSL https://bootstrap.pypa.io/get-pip.py | python3 && \
     pip3 install --no-cache-dir --upgrade setuptools && \
